You've heard of MHeard. Now there is UnHeard - list nodes that are near to you, but cannot actually see, and see who has been seen to talk to them based on seen traffic